--- a/style.css
+++ b/style.css
@@ -1,49 +1,63 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 nav {
   background-color: #000000;
   color: #ffffff;
   position: fixed;
   top: 0;
-  left: 0;
   width: 100%;
 }
 
 nav img {
   margin: 10px;
-  vertical-align: middle;
 }
 
-nav div {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-div h1 {
-  font-size: 40px;
-  margin: 20px;
-  margin-bottom: 0px;
-}
-
-div ul {
+.menu {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333333;
+  /*padding-left: 25%;*/
 }
 
-div li {
+.menu h1 {
+  font-size: 40px;
+  margin: 0px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.menu li {
   float: left;
+  padding: 3px;
 }
 
-div li a {
+.menu li a {
   display: block;
   color: white;
   text-align: center;
-  padding: 12px;
+  padding: 20px;
+  font-size: 25px;
   text-decoration: none;
 }
 
-div li a:hover {
+.menu li a:hover {
   background-color: #ffffff;
   color: #000000;
+}
+
+header {
+
+}
+
+section{
+  background-color: #DBDFAC;
+  text-align: center;
+}
+
+section table caption{
+  padding: 20px;
 }
