--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
+html, body, h1, h2, h3, h4, h5, h6, p {
+  font-family: 'Noticia Text', serif;
+}
+
 body {
   margin: 0;
   padding: 0;
+
+}
+
+body, html {
+    height: 100%;
 }
 
 nav {
@@ -20,7 +29,8 @@ nav img {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  /*padding-left: 25%;*/
+  width: 100%;
+  padding-left: 26%;
 }
 
 .menu h1 {
@@ -49,15 +59,61 @@ nav img {
   color: #000000;
 }
 
-header {
-
-}
-
-section{
-  background-color: #DBDFAC;
+.header {
+  padding-top: 80px;
+  background-image: url("images/burgerbackground.jpeg");
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   text-align: center;
+  color: #ffffff;
 }
 
-section table caption{
+.header h1 {
+  font-size: 100px;
+  font-weight: bold;
+  margin-bottom: 0px;
+}
+
+.header h4 {
+  margin-top: 0px;
+}
+
+.cardapio {
+  height: 100%;
+  background-color: #1E1E1E;
+  color: #ffffff;
+}
+
+.titulocontainer {
+  margin: 60px;
+  margin-top: 0px;
+}
+
+.subtitulo {
+  margin: 0px;
   padding: 20px;
+  padding-bottom: 10px;
+  font-size: 40px;
+}
+
+.legenda {
+  margin-top: 0px;
+  padding-left: 20px;
+}
+
+.lojas {
+  background-image: url("images/riodejaneiro.jpeg");
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #ffffff;
+}
+
+footer {
+  text-align: center;
 }
