--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ nav img {
   padding: 0;
   overflow: hidden;
   width: 100%;
-  padding-left: 26%;
+  /* padding-left: 26%; CENTRALIZAR NAVBAR ITEMS */
 }
 
 .menu h1 {
@@ -59,7 +59,7 @@ nav img {
 }
 
 .header {
-  padding-top: 80px;
+  padding-top: 81px;
   background-image: url("images/burgerbackground.jpeg");
   height: 100%;
   background-attachment: fixed;
@@ -80,27 +80,29 @@ nav img {
   margin-top: 0px;
 }
 
-.cardapio {
-  height: 100%;
-  background-color: #1E1E1E;
-  color: #ffffff;
-}
-
 .titulocontainer {
   margin: 60px;
   margin-top: 0px;
+  padding-top: 40px; /* QUANDO A SECTION ESTA NO TOPO FICA CORTADO */
 }
 
 .subtitulo {
   margin: 0px;
   padding: 20px;
   padding-bottom: 10px;
+  padding-top: 0px;
   font-size: 40px;
 }
 
 .legenda {
   margin-top: 0px;
   padding-left: 20px;
+}
+
+.cardapio {
+  height: 100%;
+  background-color: #1E1E1E;
+  color: #ffffff;
 }
 
 .lojas {
